can u configure with gmail instead of Sendgrid

--- a/src/app/admin/communication/settings.json
+++ b/src/app/admin/communication/settings.json
@@ -1,6 +1,7 @@
 
 {
-  "sendgridApiKey": "",
+  "gmailUser": "",
+  "gmailAppPassword": "",
   "twilioAccountSid": "",
   "twilioAuthToken": "",
   "twilioPhoneNumber": ""
