add the function to user rules one user does not allow to see the other

--- a/src/app/admin/communication/settings.json
+++ b/src/app/admin/communication/settings.json
@@ -1,7 +1,6 @@
-
 {
-  "gmailUser": "",
-  "gmailAppPassword": "",
+  "gmailUser": "ripondxn@gmail.com",
+  "gmailAppPassword": "25051983",
   "twilioAccountSid": "",
   "twilioAuthToken": "",
   "twilioPhoneNumber": ""
