--- a/src/app/admin/communication/settings.json
+++ b/src/app/admin/communication/settings.json
@@ -1,6 +1,6 @@
 {
   "gmailUser": "ripondxn@gmail.com",
-  "gmailAppPassword": "25051983",
+  "gmailAppPassword": "qapo xkme wnaf mkja ",
   "twilioAccountSid": "",
   "twilioAuthToken": "",
   "twilioPhoneNumber": ""
