add more feature & function to make it dynamic to "Subscription Invoice

--- a/src/app/admin/workflow-settings/settings.json
+++ b/src/app/admin/workflow-settings/settings.json
@@ -1,4 +1,7 @@
+
 {
   "approvalProcessEnabled": false,
-  "automaticInvoiceGenerationEnabled": true
+  "automaticInvoiceGenerationEnabled": true,
+  "invoiceGenerationDay": 1,
+  "monthsToGenerate": 1
 }
