--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "firebase": "^11.9.1",
     "formidable": "^3.5.1",
     "genkit": "^1.14.1",
+    "googleapis": "^140.0.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
