--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev --turbopack -p 9003",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -53,6 +53,7 @@
     "googleapis": "^140.0.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "kill-port": "^2.0.1",
     "lucide-react": "^0.475.0",
     "next": "^15.5.2",
     "nodemailer": "^6.9.14",
