--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.5.0",
     "formidable": "^3.5.1",
     "genkit": "^1.14.1",
     "googleapis": "^140.0.1",
