--- a/src/app/admin/access-control/module-settings.json
+++ b/src/app/admin/access-control/module-settings.json
@@ -83,5 +83,10 @@
     "id": "settings",
     "name": "Settings",
     "enabled": true
+  },
+  "expense": {
+    "id": "expense",
+    "name": "Expense Module",
+    "enabled": true
   }
 }
